--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Bookshelf</string>
+    <string name="default_image_description">Book</string>
 </resources>
